--- a/index.html
+++ b/index.html
@@ -168,6 +168,6 @@
 		</section>
 	</div>
 	<footer>
-		<p>&copy; 2023 Spiderr12PL on Roblox. All rights reserved.</p>
+		<p>&copy; 2023 Dorian Pająk. All rights reserved.</p>
 	</footer>
 </body></html>
