--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				<p>That is all what I wanted to show you. Let me know if there are mistakes on this website. Obviously I can do more than I showed. Here are my social links so you can talk to me:</p>
 				<ul>
 					<li>Discord: _klucznik,</li>
-					<li>E-mail: doriandominik49@wp.pl</li>
+					<li>E-mail: doriandominik49@wp.pl,</li>
 					<li>Facebook: <a href="https://www.facebook.com/profile.php?id=100077063484869">Dorian Pająk</a>,</li>
 					<li>Guilded: <a href="https://guilded.gg/i/2ye8BwW2">Server</a>,</li>
 				</ul>
