--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				<p>I host websites made by me on the <a href="https://github.com/" target="_blank">GitHub</a> platform but if you give me a different hosting website to use, I can host it here. Additionally if you provide me a way of making a dynamic hosting, I can use the static web technologies plus these dynamic technologies:</p>
 				<ul>
 					<li>MySQL (talk to a database system),</li>
-					<li>PHP (answer with information obtained from a database, for example sign in system).</li>
+					<li>PHP (answer with information obtained from a database, for example a sign in system).</li>
 				</ul>
 				<p>This website is also a part of my portfolio. It has a special support for mobile devices. Go ahead and see that. I also have an another website and it is about photos, which I took by using my drone. Click <a href="https://dorianekbsp.github.io/" target="_blank">here</a> to see more of my web development work. You can talk to me to decide how the link to the website should look like (with addition of ".github.io" at the end"). Alternatively you can use something different to host a website instead of relying on me.</p>
 			</div>
