--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					<li>Discord: _klucznik,</li>
 					<li>E-mail: doriandominik49@wp.pl,</li>
 					<li>Facebook: <a href="https://www.facebook.com/profile.php?id=100077063484869">Dorian Pająk</a>,</li>
-					<li>Guilded: <a href="https://guilded.gg/i/2ye8BwW2">Server</a>,</li>
+					<li>Guilded: <a href="https://guilded.gg/i/2ye8BwW2">Server</a>.</li>
 				</ul>
 			</div>
 		</section>
